public/css/main.css
body {
  font: 13px Helvetica, Arial;
  box-sizing:border-box;
}

.container-div1{
  display: inline-block;
  width: 100%;
  height: 100%;
  background: red;
}
.topic-div{
  display: inline-block;
  width: 78%;
  height: 10%;
  border: solid black;
  background: grey;
}
.session-div{
  display: inline-block;
  width: 20%;
  height: 10%;
  border: solid black;
  background: grey;
}

.container-div2{
   margin-top:5px;
  display: inline-block;
  width: 100%;
  height: 100%;
  background: red;
  position: relative;
}
.user-div{
  display: inline-block;
  width: 20%;
  height: 500px;;
  border: solid black;
  background: grey;
}
.chat-div{
  display: inline-block;
  position:relative;
  vertical-align:top;
  width: 78%;
  height: 500px;
  border: solid black;
  background: grey;
}
form { background: #000; padding: 2px; width: 77.7%; display: inline-block; position: absolute; bottom:0px;
   }
form input { border: 0; padding: 10px; width: 85%; margin-right: .5%; }
form button { width: 11%; background: rgb(130, 224, 255); border: none; padding: 10px; }



#messages { list-style-type: none; margin: 0; padding: 0; }
#messages li { padding: 5px 10px; }
#messages li:nth-child(odd) { background: #eee; }

